--- a/MavenProject/pom.xml
+++ b/MavenProject/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>mavenPackage</groupId>
-	<artifactId>MavenProject</artifactId>
+	<artifactId>MyMavenProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
@@ -41,7 +41,7 @@
 				<version>2.20</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
 						<!-- <suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile> -->
 					</suiteXmlFiles>
 				</configuration>
